# ChangeLog for xfce-extra/terminal
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/terminal/ChangeLog,v 1.21 2007/01/22 02:13:46 nichoj Exp $

*terminal-0.2.6 (22 Jan 2007)

  22 Jan 2007; Joshua Nichols <nichoj@gentoo.org> +terminal-0.2.6.ebuild:
  Version bump.

  20 Dec 2006; Peter Weller <welp@gentoo.org> terminal-0.2.5.8_rc2.ebuild:
  Change xslt to doc wrt bug #158654

  10 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  terminal-0.2.5.8_rc2.ebuild:
  Added version to vte dependency.

  10 Dec 2006; Joshua Nichols <nichoj@gentoo.org> -terminal-0.2.2-r1.ebuild,
  -terminal-0.2.4_pre1.ebuild, -terminal-0.2.5.1_beta1.ebuild,
  -terminal-0.2.5.4_beta2.ebuild:
  Pruned older versions with equal or lesser keywords.

  11 Dec 2006; Joshua Nichols <nichoj@gentoo.org> terminal-0.2.4.ebuild,
  terminal-0.2.4-r1.ebuild, terminal-0.2.5.1_beta1.ebuild,
  terminal-0.2.5.4_beta2.ebuild, terminal-0.2.5.8_rc2.ebuild:
  Updated dependencies for modular dbus, see bug #154521.

*terminal-0.2.5.8_rc2 (07 Dec 2006)

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  +terminal-0.2.5.8_rc2.ebuild:
  Version bump for RC2. See bug #146563.

*terminal-0.2.5.4_beta2 (10 Jul 2006)

  10 Jul 2006; Brad Cowan <bcowan@gentoo.org>
  +terminal-0.2.5.4_beta2.ebuild:
  Xfce beta 2 builds.

*terminal-0.2.5.1_beta1 (20 Apr 2006)

  20 Apr 2006; Daniel Ostrow <dostrow@gentoo.org>
  +terminal-0.2.5.1_beta1.ebuild:
  Version bump for 4.4_beta1.

  10 Dec 2005; Daniel Ostrow <dostrow@gentoo.org> terminal-0.2.4.ebuild:
  Stable on ppc64.

  08 Oct 2005; Michael Hanselmann <hansmi@gentoo.org> terminal-0.2.4.ebuild:
  Stable on ppc.

*terminal-0.2.4-r1 (06 Oct 2005)

  06 Oct 2005; Brad Cowan <bcowan@gentoo.org> terminal-0.2.4.ebuild,
  +terminal-0.2.4-r1.ebuild:
  Xfce builds for new eclass and modular Xorg.

  09 Sep 2005; Aron Griffis <agriffis@gentoo.org> terminal-0.2.2-r1.ebuild:
  Mark 0.2.2-r1 stable on ia64
