@@ -13,14 +13,14 @@ EBUILD terminal-0.2.5.8_rc2.ebuild 1358 RMD160 43cf4e554a9da4378b6850dd778f7f0ef
 MD5 6db425d02d1ba105e9de1ebf51ac89c9 terminal-0.2.5.8_rc2.ebuild 1358
 RMD160 43cf4e554a9da4378b6850dd778f7f0ef7a19308 terminal-0.2.5.8_rc2.ebuild 1358
 SHA256 68ad7e712329f0a471edbec13823cb25e0e7ee061f6e02666f1374275e585db8 terminal-0.2.5.8_rc2.ebuild 1358
-EBUILD terminal-0.2.6.ebuild 1222 RMD160 b23aa98fb249d8e2c76e92b7cddea3580a7b2e6c SHA1 f517c630affdf917a082d8752cd6fdb9c1416f9f SHA256 f4a5ddc77089afe004086fd6e543304625e69f2a42e255168fe961a2e21a8bd3
-MD5 87fd9e9ea40c1e057414f7ee459b64e3 terminal-0.2.6.ebuild 1222
-RMD160 b23aa98fb249d8e2c76e92b7cddea3580a7b2e6c terminal-0.2.6.ebuild 1222
-SHA256 f4a5ddc77089afe004086fd6e543304625e69f2a42e255168fe961a2e21a8bd3 terminal-0.2.6.ebuild 1222
-MISC ChangeLog 3182 RMD160 1204f9c4f5141fd89da5ab765bbccc6ddc433b9b SHA1 899d509439a997a972274c18b05eee561fe882b9 SHA256 b8931cb430c03cbecf4b1f05b374e134dfee07e3c4a115a2a413e29be843ea9e
-MD5 c27400d00b244e36fefeecd84ba41d8f ChangeLog 3182
-RMD160 1204f9c4f5141fd89da5ab765bbccc6ddc433b9b ChangeLog 3182
-SHA256 b8931cb430c03cbecf4b1f05b374e134dfee07e3c4a115a2a413e29be843ea9e ChangeLog 3182
+EBUILD terminal-0.2.6.ebuild 1223 RMD160 e0d0fa3c15f54b4b89b5f48ea15c5f8570b2e95b SHA1 bcc3206b116020e076c1dd301b5a38f97f7739d9 SHA256 a0ac0c39ce78833ede89f2fbf5b322b669b67353caeb1bb637e71820ee6d72cf
+MD5 db91a928092bca052149e24fc04d90c6 terminal-0.2.6.ebuild 1223
+RMD160 e0d0fa3c15f54b4b89b5f48ea15c5f8570b2e95b terminal-0.2.6.ebuild 1223
+SHA256 a0ac0c39ce78833ede89f2fbf5b322b669b67353caeb1bb637e71820ee6d72cf terminal-0.2.6.ebuild 1223
+MISC ChangeLog 3328 RMD160 e768d6c3c29b2aa4a313645fdcc781ba5f3e1c55 SHA1 18d35b82ebc46e1eab686f0536b97ced0dfb9e3e SHA256 5b3c78f998a55ec327fd1416279086d69a61149f16ea14a1b3fd959aadadb8ac
+MD5 681a57f5f3baa1058c46a00757fafd8e ChangeLog 3328
+RMD160 e768d6c3c29b2aa4a313645fdcc781ba5f3e1c55 ChangeLog 3328
+SHA256 5b3c78f998a55ec327fd1416279086d69a61149f16ea14a1b3fd959aadadb8ac ChangeLog 3328
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 MD5 c390804e060ffd11a5bbb143434b2b2d metadata.xml 157
 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 metadata.xml 157
