@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/terminal
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/terminal/ChangeLog,v 1.21 2007/01/22 02:13:46 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/terminal/ChangeLog,v 1.22 2007/01/23 18:49:15 welp Exp $
+
+  23 Jan 2007; Peter Weller <welp@gentoo.org> terminal-0.2.6.ebuild:
+  Removing usage of virtual/x11,  and hardcoding in depends. Minor clean ups.
 
 *terminal-0.2.6 (22 Jan 2007)
 
